--- a/samples/AX6Dom-test.index.html
+++ b/samples/AX6Dom-test.index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>AX6Dom - test.index</title>
-    <script type="module" src="AX6Dom-test.index.js"></script>
+    <script src="AX6Dom-test.index.js"></script>
 </head>
 <body>
 
