--- a/samples/index.html
+++ b/samples/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>Title</title>
 </head>
 <body>
-    <script src="bundle.js"></script>
+    <script src="./src/index.js"></script>
 </body>
 </html>
